[project]
name = "aws13th-social-backend-gpffh20"
version = "0.1.0"
description = "Backend API for Cloud Community Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic[email]>=2.0.0,<3.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.12.0",
    "aiomysql>=0.3.2",
    "sqlalchemy>=2.0.46",
    "greenlet>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.27.0",
]
